--- a/src/Components/Form/ContactForm/ContactForm.module.css
+++ b/src/Components/Form/ContactForm/ContactForm.module.css
@@ -1,29 +1,85 @@
-
-.containerUser{
+ 
+ .boxContact{
 display: flex;
-flex-direction: column;
-}
+justify-content: center;
+ }
 
-.containerUser button {
-  outline: none;
-  margin: 10px 0px;
-  padding: 5px;
-  border-radius: 6px;
-  width: 8%;
-  background-image: linear-gradient(45deg, #6ab1d7 0%, #33d9de 50%, #002878 100%);
-  background-position: 100% 0;
-  background-size: 200% 200%;
+ .boxContact h2 {
+  margin: 0 0 30px;
+  padding: 0;
   color: #fff;
-  box-shadow: 0 16px 32px 0 rgba(0,40,120,.35);
-  transition: .5s;
-}
-.containerUser button:hover {
-  box-shadow: 0 0 0 0 rgba(0,40,120,0);
-  background-position: 0 0;
+  text-align: center;
 }
 
-.containerUser p{
-  margin: 10px 0px;
+ 
+ label {
+  color: #03e9f4;
+  font-size: 12px;
+  margin-left: 30px;
 }
 
+.boxContact form{
+  padding: 20px;
+}
 
+.formContact{
+  background: rgba(0,0,0,.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  border-radius: 10px;
+}
+.formContact input{
+  font-size: 16px;
+  color: #fff;
+  
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+}
+
+.formContact  button {
+  text-decoration: none;
+  outline: none;
+  display: inline-block;
+  padding:  10px 20px;
+  margin: 10px 20px;
+  position: relative;
+  color: white;
+  border: 1px solid rgba(255,255,255,.4);
+  background: none;
+  font-weight: 300;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.formContact  button:before,
+.formContact  button:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  opacity: 0;
+  box-sizing: border-box;
+}
+.formContact  button:before {
+  bottom: 0;
+  left: 0;
+  border-left: 1px solid #03e9f4;
+  border-top: 1px solid #03e9f4;
+  transition: 0s ease opacity .8s, .2s ease width .4s, .2s ease height .6s;
+}
+.formContact  button:after {
+  top: 0;
+  right: 0;
+  border-right: 1px solid #03e9f4;
+  border-bottom: 1px solid #03e9f4;
+  transition: 0s ease opacity .4s, .2s ease width , .2s ease height .2s;
+}
+.formContact  button:hover:before,
+.formContact  button:hover:after{
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+}
+.formContact  button:hover:before {transition: 0s ease opacity 0s, .2s ease height, .2s ease width .2s;}
+.formContact button:hover:after {transition: 0s ease opacity .4s, .2s ease height .4s , .2s ease width .6s;}
