--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,21 @@
   
+html {
+  height: 100%;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
+  margin:0;
+  padding:0;
+  font-family: sans-serif;
+  background: linear-gradient(#141e30, #243b55);
 }
 
 * {
   margin: 0px;
   padding: 0px;
 }
+
+
+
 
